<resources>
    <string name="app_name">SalaProject</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register_here">Register Here</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_name">Comapany Name</string>
    <string name="p_iva">IVA</string>
    <string name="email">Email</string>
    <string name="conferma_password">Conferma Password</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
</resources>
