<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LoginActivity">



    <EditText
        android:id="@+id/editText"
        android:layout_width="295dp"
        android:layout_height="70dp"
        android:layout_above="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:background="#11000000"
        android:drawableStart="@mipmap/ic_account"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="295dp"
        android:layout_height="70dp"
        android:layout_alignStart="@+id/editText"
        android:layout_alignBottom="@+id/btn_login"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="250dp"
        android:background="#11000000"
        android:drawableStart="@mipmap/ic_password"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_form"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_here"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="53dp"
        android:orientation="horizontal">

    </LinearLayout>


</android.widget.RelativeLayout>